# learning-openGL

./: .gitignore  CMakeLists.txt
1-hello-world/: 1_hello_world  CMakeLists.txt  README.md  main.cpp
2-shader-from-file/: 2_shader_from_file  CMakeLists.txt  README.md  main.cpp  shader.glsl
3-error-handling/: CMakeLists.txt  README.md  main.cpp  shader.glsl
4-abstraction/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  README.md  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.cpp  VertexBufferLayout.h  core.h  main.cpp
5-textures/: 5_textures  CMakeLists.txt  IndexBuffer.h  README.md  Renderer.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  main.cpp  shader.glsl
6-perspective/: CMakeLists.txt  README.md
6-perspective/src/: core.h  index_buffer.cpp  index_buffer.h  main.cpp  renderer.cpp  renderer.h  shader.h  vertex.cpp  vertex.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.cpp
7-multiple-objects/: CMakeLists.txt  README.md
7-multiple-objects/src/: core.h  index_buffer.cpp  index_buffer.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  vertex.cpp  vertex.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
7-multiple-objects/src/shaders/: shader.glsl
7-multiple-objects/src/world/: camera.h  cube.cpp  cube.h
src/: example.h  main.cpp
src/1-hello-world/: README.md  hello_world.cpp  hello_world.h
src/2-shader-from-file/: README.md  shader-from-file.cpp  shader-from-file.h  shader.glsl
src/3-error-handling/: README.md  error-handling.h  shader.glsl
